fix: address second round of hosting review feedback
- Remove workspace-based branch fetch and the subdirectory option: it never
  ran for Pipeline jobs, read agent workspaces from the controller, and
  fetched into workspaces that running builds may be using
- Replace the per-refresh temporary clone with a persistent cache repository
  under $JENKINS_HOME/caches that only fetches branch tips (depth 1)
- Use Caffeine for the branch cache: refresh at most once per interval
  (refreshIntervalSeconds system property, default 60s), bounded size and
  expiry; cache key no longer includes filters so jobs share fetches
- Use Util.deleteRecursive, records for CacheKey/CacheEntry, isBlank()
- Stop logging at INFO level
- index.jelly: escape name and render formattedDescription
- Remove redundant build section from pom.xml
- Remove CHANGELOG.md (GitHub releases are used instead)
- Move development instructions to CONTRIBUTING.md, require Maven 3.9.6+
- Add integration test covering both fetch modes

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>